<resources>
    <string name="app_name">ListXml</string>
    <string name="login">Login</string>
    <string name="please_sign_in_to_continue">Please sign in to continue</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="signup">SignUp!</string>
    <string name="username">UserName</string>
    <string name="register">Register</string>
    <string name="action_delete"> Delete </string>
    <string name="action_rename"> Rename</string>
    <string name="empty_list">Empty list</string>
    <string name="list">list name\n</string>
    <string name="listxml">ListXml</string>
    <string name="litle_text_below">litle text below</string>
    <string name="insert_list_name">Insert list name</string>
    <string name="userid">userId</string>
    <string name="listid">listId</string>
    <string name="logout">Logout</string>
    <string name="action_search">action_search</string>
    <string name="search_for_items">Search for items</string>
    <string name="mypreferences">myPreferences</string>
    <string name="listidPref">listId</string>
    <string name="itemsscreen">ItemsScreen</string>
    <string name="no_internet_acces_limited">No internet, acces limited</string>
    <string name="user">User</string>
</resources>